--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="flex flex-col items-center justify-center gap-4 py-8 md:py-0">
             <picture>
           
-              <img src="./images/people/model8.jpg" alt="Abstract tech visual" class="max-w-full rounded-lg shadow-lg object-cover w-full md:w-auto" style="max-height:400px;" loading="lazy">
+              <img src="/images/model8.jpg" alt="Abstract tech visual" class="max-w-full rounded-lg shadow-lg object-cover w-full md:w-auto" style="max-height:400px;" loading="lazy">
             </picture>
             <!-- Slide phrases displayed below the hero image as H4-sized text -->
             <h4 id="slideshow" class="slideshow-below-image text-lg md:text-xl lg:text-2xl font-semibold text-itech-blush text-center" role="status" aria-live="polite"></h4>
